# folio_migration_tools

./: .darglint  .env.json.template  .flake8  .gitignore  .grenrc.yml  .pre-commit-config.yaml  .readthedocs.yml  .safety-policy.yml  .sonarcloud.properties  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Pipfile  QA.MD  README.md  conftest.py  generate_schemas.py  main.py  main_bibs.py  main_holdings.py  main_holdings_csv.py  main_holdings_marc.py  main_holdings_rules.py  main_items.py  main_items_new.py  marc_to_folio.py  migration_helper.py  mypy.ini  noxfile.py  proposed_workflow.md  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  setup.cfg  test_bibs_rules_mapper.py  test_bibs_rules_mapper_vanilla.py  test_chalmers_mapper.py  test_commit.txt  test_default_mapper.py  (+4 more)
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/workflows/: python-app.yml  python-publish.yml
bash_scripts/: Readme.md  holdings_db_load_example.sh  instance_db_load_example.sh  items_db_load_example.sh  srs_marc_records_load_example.sh  srs_raw_records_load_example.sh  srs_records_load_example.sh
bash_scripts/map_folder_template/: item_to_item.json  item_types.tsv  locations.tsv  open_loans_template.tsv
coverage-reports/: coverage-1.xml
docs/: BatchPoster.md  Mapping_file_based_mapping.md  conf.py  index.md  installing.md  mapping_file_based_mapping.md  mapping_files.md  marc_rule_based_mapping.md  migration_process.md  migration_tasks.md  q_and_a.md  quick_tutorial.md  reference.rst  requirements.txt  statistical_codes.md
docs/source/: conf.py  index.md  installing.md  logging.md  mapping_file_based_mapping.md  mapping_files_circulation.md  mapping_files_inventory.md  marc_rule_based_mapping.md  migration_process.md  migration_reports.md  migration_tasks.md  q_and_a.md  quick_tutorial.md  reference_data_mapping.md  statistical_codes.md
generated_schemas/: AuthorityTransformerSchema.json  BatchPosterSchema.json  BibsTransformerSchema.json  CoursesMigratorSchema.json  FOLIO_organization_extended_object_schema.json  HoldingsCsvTransformerSchema.json  HoldingsMarcTransformerSchema.json  InventoryBatchPosterSchema.json  ItemsTransformerSchema.json  LibraryConfigurationSchema.json  LoansMigratorSchema.json  MARCImportTaskSchema.json  ManualFeeFinesTransformerSchema.json  OrdersTransformerSchema.json  OrganizationTransformerSchema.json  RequestsMigratorSchema.json  ReservesMigratorSchema.json  UserImportTaskSchema.json  UserTransformerSchema.json  compositeCoursesSchema.json  compositeFeeFineSchema.json  compositeOrganizationSchema.json  compositePurchaseOrderLineSchema.json
maps/: item_map_alabama.json  item_map_five_colleges.json  mapping_rules_alabama.json  mapping_rules_default.json  mapping_rules_fc.json  mapping_rules_msu.json  mfhd_to_holdings_alabama.json  mfhd_to_holdings_default.json  mfhd_to_holdings_five_colleges.json
marc_to_folio/: .sonarcloud.properties  ChalmersMapper.py  DefaultMapper.py  FolioClient.py  MtFMapper.py  __init__.py  alabama_mapper.py  bibs_conditions.py  bibs_processor.py  bibs_rules_mapper.py  chalmers_mapper.py  conditions.py  custom_exceptions.py  default_mapper.py  five_collages_mapper.py  folder_structure.py  folio_client.py  folio_rules_mapper.py  helper.py  holdings_alabama_mapper.py  holdings_default_mapper.py  holdings_default_mapper_old.py  holdings_helper.py  holdings_marc_processor.py  holdings_processor.py  items_default_mapper.py  items_default_mapper.py_old  items_processor.py  main_base.py  marc_processor.py  migration_base.py  migration_helper.py  migration_report_descriptions.json  mock_folio_client.py  report_blurbs.py  rules_mapper_base.py  rules_mapper_bibs.py  rules_mapper_holdings.py
marc_to_folio/mapping_file_transformation/: holdings_mapper.py  item_mapper.py  mapper_base.py  ref_data_mapping.py
marc_to_folio/scripts/: join_id_maps.py
migration_tasks/: batch_poster.py  bibs_transformer.py  circulation_helper.py  fee_fines_migrator.py  holdings_csv_transformer.py  holdings_marc_transformer.py  items_transformer.py  migration_task_base.py  open_loans_migrator.py  open_requests_migrator.py  user_transformer.py
migration_tools/: circulation_helper.py  custom_exceptions.py  folder_structure.py  folio_releases.py  helper.py  holdings_helper.py  library_configuration.py  main_base.py  mapper_base.py  migration_configuration.py  migration_report.py  report_blurbs.py
migration_tools/mapping_file_transformation/: holdings_mapper.py  item_mapper.py  mapper_base.py  mapping_file_mapper_base.py  mapping_file_mapping_base_impl.py  organization_mapper.py  ref_data_mapping.py  user_mapper.py  user_mapper_base.py
migration_tools/marc_rules_transformation/: bibs_processor.py  conditions.py  conditions.py.e351eb4806f92c095424a1226d12ced2.tmp  (+5 more)
python_scripts/: holdings_poster.py  instance_poster.py  items_poster.py  marc_checker.py
scripts/: extract_translations.py  update_language.py
src/: CHANGELOG.md  fetch_default_ref_data.py  generate_schemas.py
static/: reference_data.json
tests/: bibs_rules_mapper.py  rename_test_bibs_rules_mapper_vanilla.py  test_basic.py  test_batch_poster.py  test_batch_poster_retry.py  test_batch_poster_v2.py  test_bibs_rules_mapper.py  test_bibs_rules_mapper_vanilla.py  test_bibs_rules_mapper_vanilla.py_legacy  test_bibs_transformer.py  test_circulation_helper.py  test_colors.py  test_conditions.py  test_config.json.template  test_config_file_load.py  test_config_rules.json  test_courses_mapper.py  test_courses_migrator.py  test_extradata_writer.py  test_folder_structure.py  test_helper.py  test_holdings_csv_transformer.py  test_holdings_helper.py  test_holdings_mapper.py  test_holdings_marc_transformer.py  test_holdings_processor.py  test_holdings_statementsparser.py  test_i18n_cache.py  test_inheritance.py  test_inventory_batch_poster.py  test_items_mapper.py  test_items_transformer.py  test_json_report_writing.py  test_legacy_loan.py  test_legacy_request.py  test_legacy_reserve.py  test_loans_migrator.py  test_logging_config.py  test_main.py  test_manual_fee_fines_mapper.py  (+33 more)
translations/: en.json
(+247 files in other folders)
