[project]
name = "folio_migration_tools"
version = "1.9.9"
description =  "A tool allowing you to migrate data from legacy ILS:s (Library systems) into FOLIO LSP"
authors = [
	{name = "Theodor Tolstoy", email = "github.teddes@tolstoy.se"},
	{name = "Lisa Sjögren"},
	{name = "Brooks Travis", email = "brooks.travis@gmail.com"},
	{name = "Jeremy Nelson"},
	{name = "Clinton Bradford"}
]
license = "MIT"
readme = "README.md"
keywords = ["FOLIO", "ILS", "LSP", "Library Systems", "MARC21", "Library data"]

[project.urls]
documentation = "https://folio-migration-tools.readthedocs.io/en/latest/"
homepage = "https://github.com/folio-fse/folio_migration_tools"
repository = "https://github.com/FOLIO-FSE/folio_migration_tools"

[project.scripts]
folio-migration-tools = "folio_migration_tools.__main__:main"

[tool.coverage.report]
show_missing = false
fail_under = 10

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["folio_migration_tools"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.10"
folioclient = "^0.70.1"
pyhumps = "^3.7.3"
defusedxml = "^0.7.1"
python-dateutil = "^2.8.2"
folio-uuid = "^1.0.0"
pymarc = "^5.2.3"
pydantic = "^1.10.2"
argparse-prompt = "^0.0.5"
deepdiff = "^6.2.3"
pyaml = "^21.10.1"
python-i18n = "^0.3.9"
art = "^6.5"
folio-data-import = ">=0.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
lxml = ">4.9"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-cov = "^4.0.0"
black = "^22.10.0"
flake8 = "^7.3.0"
mypy = "^0.982"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.12.12"
flake8-bandit = "^4.1.1"
flake8-isort = "^6.1.2"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
types-requests = "^2.28.11.17"
types-python-dateutil = "^2.8.19.11"
ipykernel = "^6.29.5"
pytest-asyncio = "^0.23.0"
sphinx-autobuild = "^2024.10.3"

[tool.poetry.group.docs.dependencies]
m2r = "^0.2.1"
myst-parser = "<4.0.0"
sphinx = ">=6.0.0, <8.0.0"
sphinx-autodoc-typehints = "^1.17.0"
sphinx-rtd-theme = "^1.0.0"
toml = "^0.10.2"
sphinx-book-theme = "^1.1.4"

[tool.poetry.extras]
docs = ["m2r", "sphinx", "sphinx-autodoc-typehints", "sphinx-rtd-theme", "toml",]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
