[project]
name = "folio_migration_tools"
version = "1.10.0b6"
description =  "A tool allowing you to migrate data from legacy ILS:s (Library systems) into FOLIO LSP"
authors = [
	{name = "Theodor Tolstoy", email = "github.teddes@tolstoy.se"},
	{name = "Lisa Sjögren"},
	{name = "Brooks Travis", email = "brooks.travis@gmail.com"},
	{name = "Jeremy Nelson"},
	{name = "Clinton Bradford"}
]
license = "MIT"
readme = "README.md"
keywords = ["FOLIO", "ILS", "LSP", "Library Systems", "MARC21", "Library data"]
requires-python = ">=3.10,<4.0"
dependencies = [
    "folioclient>=1.0.4",
    "pyhumps>=3.7.3,<4.0.0",
    "defusedxml>=0.7.1,<1.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "folio-uuid>=1.0.0,<2.0.0",
    "pymarc>=5.2.3,<6.0.0",
    "pydantic>=2.12.3,<3.0.0",
    "argparse-prompt>=0.0.5,<1.0.0",
    "deepdiff>=6.2.3,<7.0.0",
    "pyaml>=21.10.1,<22.0.0",
    "python-i18n>=0.3.9,<1.0.0",
    "art>=6.5,<7.0",
]

[dependency-groups]
dev = [
	"pytest>=7.1.3,<8.0.0",
	"coverage[toml]>=6.5.0,<7.0.0",
	"pytest-cov>=4.0.0,<5.0.0",
	"black>=22.10.0,<23.0.0",
	"flake8>=7.3.0,<8.0.0",
	"mypy>=0.982,<1.0.0",
	"flake8-black>=0.3.6,<1.0.0",
	"flake8-bugbear>=24.12.12,<25.0.0",
	"flake8-bandit>=4.1.1,<5.0.0",
	"flake8-isort>=6.1.2,<7.0.0",
	"flake8-docstrings>=1.6.0,<2.0.0",
	"darglint>=1.8.1,<2.0.0",
	"types-requests>=2.28.11.17,<3.0.0",
	"types-python-dateutil>=2.8.19.11,<3.0.0",
	"ipykernel>=6.29.5,<7.0.0",
	"pytest-asyncio>=0.23.0,<0.24.0",
	"lxml>=6.0.2",
	"pyrefly>=0.43.1",
]
docs = [
	"m2r>=0.2.1,<0.3.0",
	"myst-parser>=0.18.1,<4.0.0",
	"sphinx>=6.0.0,<7.0.0",
	"sphinx-autodoc-typehints>=1.17.0,<2.0.0",
	"sphinx-rtd-theme>=1.0.0,<2.0.0",
	"toml>=0.10.2,<0.11.0",
	"sphinx-book-theme>=1.1.4,<2.0.0",
	"sphinx-autobuild>=2024.10.3,<2025.0.0"
]
[project.urls]
Documentation = "https://folio-migration-tools.readthedocs.io/en/latest/"
Homepage = "https://github.com/folio-fse/folio_migration_tools"
Repository = "https://github.com/FOLIO-FSE/folio_migration_tools"

[project.scripts]
folio-migration-tools = "folio_migration_tools.__main__:main"

[tool.coverage.report]
show_missing = false
fail_under = 10

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["folio_migration_tools"]

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

# Linting
[tool.ruff]
line-length = 99
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "site-packages",
    "venv",
    "**/tests/*.py",
    "integration_test.py"
]

indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["B", "B9", "C", "E", "F", "S", "W"]
ignore = ["E741", "S113"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]
"**/test_*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.mccabe]
max-complexity = 15
