[metadata]
name = EBSCO FOLIO Migration Tools-fontanka16
version = 1.0.0
author = Theodor Tolstoy
author_email = ttolstoy@ebsco.com
description = A tool allowing you to migrate data from a ILS (Library system) into FOLIO LSP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FOLIO-FSE/folio_migration_tools
project_urls =
    Bug Tracker = https://github.com/FOLIO-FSE/folio_migration_tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src