[metadata]
name = folio_migration_tools
version = 1.3.0
author = Theodor Tolstoy
author_email = pypi.teddes@tolstoy.se
description = A tool allowing you to migrate data from legacy ILS:s (Library systems) into FOLIO LSP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FOLIO-FSE/folio_migration_tools
project_urls =
    Bug Tracker = https://github.com/FOLIO-FSE/folio_migration_tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[flake8]
select = B,B9,BLK,C,E,F,I,S,W
ignore =
    S101,
    W605,
    E203,
    W503
max-complexity = 22
max-line-length = 99
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,tests, src/folio_migration_tools/report_blurbs.py, tests
statistics = True
[isort]
profile=black
src_paths=src
# mypy.ini
[mypy]
ignore_missing_imports = True

[options]
package_dir =
    = src
install_requires =
    appdirs==1.4.4
    argparse-prompt==0.0.5
    astroid==2.6.5
    attrs==21.2.0
    black==22.3.0
    certifi==2021.5.30
    charset-normalizer==2.0.3
    click==8.0.2
    coverage[toml]==6.3; python_version >= '3.7'
    deprecated==1.2.12
    defusedxml==0.7.1
    folio-uuid==0.2.3
    folioclient==0.39
    idna==3.2
    inflection==0.5.1
    iniconfig==1.1.1
    isort==5.9.2
    joblib==1.1.0
    lazy-object-proxy==1.6.0
    lxml==4.6.5
    markdown==3.3.4
    mccabe==0.6.1
    mypy-extensions==0.4.3
    packaging==21.3; python_version >= '3.6'
    pyyaml
    parameterized==0.8.1
    pathspec==0.9.0
    pluggy==1.0.0; python_version >= '3.6'
    py==1.11.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
    pydantic==1.9.0
    pyhumps==3.5.0
    pylint==3.0.0a4
    pymarc==4.1.1
    pyparsing==3.0.7; python_version >= '3.6'
    pyrsistent==0.18.0
    pytest-cov==3.0.0
    pytest==7.1.1; python_version >= '3.6'
    python-dateutil==2.8.2
    pytz==2021.1
    regex==2021.7.6
    requests==2.26.0
    setuptools==60.6.0; python_version >= '3.7'
    six==1.16.0
    toml==0.10.2
    tomli==1.1.0
    typing-extensions==4.0.1; python_version >= '3.6'
    urllib3==1.26.6
    wrapt==1.12.1
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
